fix bug broken layout in opera

--- a/app/assets/stylesheets/general_ui.css.scss
+++ b/app/assets/stylesheets/general_ui.css.scss
@@ -106,10 +106,11 @@ a.underline-link { border-bottom: solid 1px #ffc91e; }
   .top_menu_box{
     display:block;
     height: 70px;
+    padding-top: 10px;
     ul.top_menu{
       li{
         float: left;
-        margin-top:28px;
+        margin-top:18px;
         text-align:center;
         // margin-left:30px;
         height:38px;
